{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "4fbc5626-2e15-4b75-b38f-90cc4b58c40f",
            "actions": [
                {
                    "name": "MoveVertical",
                    "type": "Value",
                    "id": "19358081-8e16-4c38-a0a3-3eade6de7c88",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "cbdbb1af-1231-43f9-9078-e446f3a92199",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClickSelect",
                    "type": "Button",
                    "id": "b834963c-8930-4e73-bf5e-ef96a0b0376c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "881abfc7-7af5-47cd-ab39-5c2282b39f6e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22b15873-90f3-46a0-93eb-b9bcdd5c4420",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7af7aa87-7479-4f36-b1cc-e17d75248db8",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ba43670-b47d-41db-b2ca-82cb61c6b182",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}